--- a/KrysiaBartek2024/source/acol2cTf.tex
+++ b/KrysiaBartek2024/source/acol2cTf.tex
@@ -9,9 +9,17 @@
 \begin{document}
 \maketitle
 
-%%% ID: 5
+\section{First bids}
+\begin{itemize}
+    \item Responder shows only their very solid suit (4 out of 5 top honours).
+    \item In any other case use 2\diams -- positive (4+\hcp or king) or 2\hearts -- negative (3-, no king).
+    \item After positive response, opener bids 2\nt with balanced hand or their suit (with unbalanced hand only).
+    \item Opener bids 2\hearts as a Kokish relay (heart suit or balanced 25+, see: {\systemref{29}{Kokish relay}})
+\end{itemize}
+
+%%% ID: 30
 %%% PRIORITY: 142
-%%% TITLE: Acol 2{\color{OliveGreen}\clubsuit}
+%%% TITLE: Acol 2\clubs
 %%% SYSTEM BEGIN %%%
 
 2\clubs\ opening = 23+ HCP or 9.5 winning tricks
@@ -27,16 +35,20 @@
 \subsubsection*{2\clubs\ -- 2\hearts \\ ?}
 \begin{itemize}
     \item \pass\ = good \hearts
-    \item 2\spades\ = 5+, \fonce
-    \item 2\nt\ = min, \bal, \nf
+    \item 2\spades\ = \nat (5+), \fonce
+    \item 2\nt/3\clubs/3\diams = \nf
+    \item 3\hearts = \nat (5+), \gf
 \end{itemize}
 
-any other bid = \gf
+\subsubsection*{2\clubs\ -- 2\hearts \\ 2\nt\ -- ?}
+System as after 2\nt\ opening, except non-\gf transfers: 3\diams, 3\hearts
+force 3\hearts, 3\spades.
 
 \subsubsection*{2\clubs\ -- 2\diams \\ ?}
 \begin{itemize}
-    \item 2\nt\ = min, \bal
-    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, \unbal
+    \item 2\nt\ = 23-24, \bal
+    \item 2\hearts = Kokish relay (see: {\systemref{29}{Kokish relay}})
+    \item 2\spades, 3\clubs, 3\diams = 5+, \unbal
     \item 3\hearts, 3\spades, 4\clubs, 4\diams = agreeing suit
 \end{itemize}
 
@@ -45,8 +57,8 @@ System as after 2\nt\ opening
 
 \subsubsection*{2\clubs\ -- 2\diams \\ 2\hearts\ -- ?}
 \begin{itemize}
+    \item 2\spades\ = no fit, relay
     \item 3\hearts\ = fit
-    \item 3\spades\ = no fit, relay
 \end{itemize}
 
 \subsubsection*{2\clubs\ -- 2\diams \\ 2\spades\ -- ?}
