--- a/lib/sequence.sty
+++ b/lib/sequence.sty
@@ -45,9 +45,11 @@
 {%
     \ifcase#1\relax
     \or
+        \def\optionsunskip{-1.8em}
         \def\optionsitemindent{4em}
         \def\optionslabelwidth{6em}
     \or 
+        \def\optionsunskip{-3em}
         \def\optionsitemindent{4em}
         \def\optionslabelwidth{3.2em}
     \else
@@ -55,12 +57,13 @@
         \def\optionslabelwidth{5em}
     \fi
 
-    \begin{itemize}[align=left, itemindent=\optionsitemindent, labelwidth=\optionslabelwidth, itemsep=-0.6em]
-        \vspace*{-1.5em}
+    \begin{itemize}[align=left, itemindent=\optionsitemindent, labelwidth=\optionslabelwidth, itemsep=-0.5em]
+        \vspace*{\optionsunskip}
         
 }
 {%
-    \end{itemize}   
+    \end{itemize}
+    \vspace*{1em}
 }
 
 
@@ -85,10 +88,11 @@
         \def\optionslabelwidth{11em}
     \fi
 
-    \begin{itemize}[align=left, itemindent=\optionsitemindent, labelwidth=\optionslabelwidth, itemsep=-0.6em]
+    \begin{itemize}[align=left, itemindent=\optionsitemindent, labelwidth=\optionslabelwidth, itemsep=-0.5em]
         \vspace*{\optionsunskip}
         
 }
 {%
-    \end{itemize}   
+    \end{itemize}
+    \vspace*{1em}
 }
