--- a/lib/sequence.sty
+++ b/lib/sequence.sty
@@ -7,6 +7,7 @@
   \par\noindent\relax
   \compSequenceScan#1\relax\relax\relax\relax
   \par\relax\relax
+  \relax{\color{CadetBlue}\rule[3mm]{4.5cm}{0.4mm}}
 }
 
 
@@ -72,7 +73,7 @@
 % 1 = left, 2 = left-middle, 3 = right-middle, 4 = right
 \newenvironment{compoptions}[1][1]
 {%
-    \def\optionsunskip{-3em}
+    \def\optionsunskip{-1.4em}
     \def\optionsitemindent{9em}
     \ifcase#1\relax
     \or
